# GovVault

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
__tests__/components/: Badge.test.tsx
app/: globals.css  layout.tsx  page.tsx
app/analytics/: page.tsx
app/dashboard/: page.tsx
app/faucet/: page.tsx
app/history/: page.tsx
app/proposals/[id]/: page.tsx
app/proposals/[id]/history/: page.tsx
app/settings/: page.tsx
app/transfer/: page.tsx
components/layout/: Footer.tsx  Navbar.tsx
components/theme/: ThemeToggle.tsx
components/ui/: QVComparisonCard.tsx  WelcomeModal.tsx
components/wallet/: WalletButton.tsx
contracts/governor-contract/: Cargo.toml
contracts/governor-contract/src/: lib.rs  test.rs
contracts/governor-contract/test_snapshots/test/: test_proposal_lifecycle.1.json
contracts/treasury-contract/: Cargo.toml
contracts/treasury-contract/src/: lib.rs
hooks/: useContractEvents.ts  useGovernor.ts  useGovernor.tsx  useWallet.ts
lib/: constants.ts  stellar.ts
