[package]
name = "treasury-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.11" }
ed25519-dalek = "=2.1.1"

[dev-dependencies]
soroban-sdk = { version = "22.0.11", features = ["testutils"] }

[profile.release]
overflow-checks = true
